@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.7.1 on Sun Feb 19 15:40:11 2017 -->
+<!-- generated by wxGlade 0.7.1 on Thu Apr 13 17:09:15 2017 -->
 
 <application class="" encoding="UTF-8" for_version="3.0" header_extension=".h" indent_amount="4" indent_symbol="space" is_template="0" language="python" name="" option="0" overwrite="0" path="converter.py" source_extension=".cpp" top_window="main_frame" use_gettext="1" use_new_namespace="1">
     <object class="MainFrame" name="main_frame" base="EditFrame">
@@ -99,7 +99,7 @@
                 <object class="wxGridSizer" name="grid_sizer_2" base="EditGridSizer">
                     <hgap>0</hgap>
                     <rows>1</rows>
-                    <cols>2</cols>
+                    <cols>3</cols>
                     <vgap>0</vgap>
                     <object class="sizeritem">
                         <border>0</border>
@@ -116,6 +116,14 @@
                             <checked>1</checked>
                             <label>DNG</label>
                             <tooltip>Convert to DNG</tooltip>
+                        </object>
+                    </object>
+                    <object class="sizeritem">
+                        <border>0</border>
+                        <option>0</option>
+                        <object class="wxCheckBox" name="thumb_checkbox" base="EditCheckBox">
+                            <label>Thumbnail</label>
+                            <tooltip>Create thumbnail (needed by some editors e.g. darktable)</tooltip>
                         </object>
                     </object>
                 </object>
