@@ -1,4 +1,5 @@
 v1.1.1
+* Added thumbnail option to GUI (needed by some applications e.g. darktable)
 * Slightly improved default white balance for SJ5000x and M20
 * Fixed GUI translations on windows
 * Added support for SJ6 Legend
